fixed max width so container won't overflow, added boolean value check for decimal clicks and calculator working for project specs. Future updates to include limiting operand clicks and clearing console when number selected after equal sign

--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ background-color: orange;
 .numberViewer{
   margin: 0 auto;
   margin-top: 100px;
-  width: 328px;
+  max-width: 328px;
+  width: 100%;
   /*width: 22.6%*/
   height: 406px;
   display: flex;
